# talio-net-appchain

./: .gitignore
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  testnet_fixtures.rs
pallets/account/: Cargo.toml
pallets/account/src/: lib.rs
pallets/certificate/: Cargo.toml
pallets/certificate/src/: lib.rs
pallets/cv/: Cargo.toml
pallets/cv/rpc/: Cargo.toml
pallets/cv/rpc/runtime-api/: Cargo.toml
pallets/cv/rpc/runtime-api/src/: lib.rs
pallets/cv/rpc/src/: lib.rs
pallets/cv/src/: lib.rs  mock.rs  tests.rs
pallets/sys-man/: Cargo.toml
pallets/sys-man/src/: lib.rs
pallets/utils/: Cargo.toml
pallets/utils/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
